refactor uptade commit

--- a/BruteForce/description-Brute-Force-Problem-Hackathon-PT.ipynb
+++ b/BruteForce/description-Brute-Force-Problem-Hackathon-PT.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"center\"><h1>HPC / SENAI / Hackathon (2023.2)<br>\n",
-    "Brute Force Algorithm </h1></div>"
+    "<div align=\"center\"><h1> Hackathon HPC SENAI CIMATEC <br>\n",
+    "Brute Force </h1></div>"
    ]
   },
   {
@@ -32,45 +32,13 @@
     "\n",
     "* `Análise dos Custos Computacionais das Aplicações Sequênciais e Paralelas`\n",
     "    + Profilling CPU (gprof)\n",
-    "    + Profiling GPU (nsys)\n",
+    "    + Profiling GPU (nsys)  \n",
     "* `Estudo das Estruturas Algorítmicas das Aplicações Paralelas`\n",
     "    + Modelos Algorítmicos Aplicados\n",
     "    + Características da inserção da API\n",
     "* `Análise de Desempenho`\n",
     "     + Experimentação de Parâmetros Ótimos (Melhores valores de Processos, Threads e Grid Computacional)\n",
     "     + Indices de eficiência (Speedup)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Regras do Hackathon"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Os idiomas oficiais desse HPC Hackathon são: inglês e português;\n",
-    "\n",
-    "* Este ano a competição será em grupos de 2 ou 3 pessoas;\n",
-    "\n",
-    "* Tópico Principal: Portabilidade e Otimização de Código;\n",
-    "    \n",
-    "* Os participantes disponibilizarão os resultados através um repositório git pessoal que será configurado pelos participantes e/ou pela ferramenta GOOGLE COLAB;\n",
-    "\n",
-    "* Além do código modificado, a resolução deve conter scripts de execução automática para obter os Parâmetros Ótimos e os Speedups;\n",
-    "\n",
-    "* O código produzido será avaliado em 2 pontos: desempenho e speedup;\n",
-    "\n",
-    "* Os participantes devem codificar e comentar seus códigos;\n",
-    "\n",
-    "* Os participantes acessarão o supercomputador via ssh com suas contas previamente configuradas;\n",
-    "\n",
-    "* As habilidades necessárias são: Git, C, C++, Python, Unix, shell, bash, OpenMP, CUDA, MPI;\n",
-    "\n",
-    "Boa sorte e boa codificação!"
    ]
   },
   {
@@ -84,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O código acima tem como finalidade a simulação de uma quebra de senha, através da estrátegia de *Força Bruta*, ou seja, teste de todas as possbilidades, uma a uma, até encontrar a solução. Faz-se perceber que o número de possibilidades em um alfabeto de 26 letras em uma senha de 20 caracteres é enorme, por isso, ao tentar cada combinação exige um grande poder computacional, reberberando em um alto tempo de execução, especialmente para um código sequencial. <br>  "
+    "O código acima tem como finalidade a simulação de uma quebra de senha, através da estrátegia de *Força Bruta*, ou seja, o algoritmo testa todas as possibilidades, uma a uma, até encontrar a solução. Faz-se perceber que o número de possibilidades em um alfabeto de $26$ letras, adiconando alguns carateres e simbolos, em uma senha de $20$ caracteres é enorme, por isso, ao tentar cada combinação, exige-se um grande poder computacional, reberberando em um alto tempo de execução do algoritmo, especialmente para um código sequencial.  A seguir o código sequencial: <br>  "
    ]
   },
   {
@@ -104,8 +72,9 @@
     "//97 to 122 use only lowercase letters\n",
     "//65 to 90 use only capital letters\n",
     "//48 to 57 use only numbers\n",
+    "//33 to 47 use only symbols\n",
     "\n",
-    "#define START_CHAR 48\n",
+    "#define START_CHAR 33\n",
     "#define END_CHAR 122\n",
     "#define MAXIMUM_PASSWORD 20\n",
     "\n",
