--- a/BruteForce/description-Brute-Force-Problem-Hackathon-PT.ipynb
+++ b/BruteForce/description-Brute-Force-Problem-Hackathon-PT.ipynb
@@ -547,10 +547,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. OpenMP = A Threads\n",
-    "2. MPI = B nós + C Processos\n",
-    "3. MPI + OpenMP = D nós + E Processos + F Threads\n",
-    "4. CUDA = G1D B1DT1D (G * 32, 1024)"
+    "1. OpenMP = **A** Threads\n",
+    "2. MPI = **B** nós + **C** Processos\n",
+    "3. MPI + OpenMP = **D** nós + **E** Processos + **F** Threads\n",
+    "4. CUDA = G1D B1DT1D (**G** * 32, 1024)"
    ]
   },
   {
