--- a/LandformRepresentation/description-Landform-Representation-Problem-Hackathon-PT.ipynb
+++ b/LandformRepresentation/description-Landform-Representation-Problem-Hackathon-PT.ipynb
@@ -44,6 +44,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Modulos Necessários para o OGBON \n",
+    "\n",
+    "Faz-se necessário inicializar os seguintes módulos, **ANTES** de acessar o jupyter-lab:\n",
+    "```cpp\n",
+    "Currently Loaded Modulefiles:\n",
+    "    1) anaconda3/2023.07     \n",
+    "    2) openmpi/4.1.5  \n",
+    "    3) openblas/0.3.26\n",
+    "    4) nvhpc/22.11\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Introdução"
    ]
   },
@@ -1880,7 +1896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
